--- a/addons/binding/org.openhab.binding.evohome/pom.xml
+++ b/addons/binding/org.openhab.binding.evohome/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>org.openhab.binding</groupId>
 		<artifactId>pom</artifactId>
-		<version>2.2.0-SNAPSHOT</version>
+		<version>2.2.0</version>
 	</parent>
 	<groupId>org.openhab.binding</groupId>
 	<artifactId>org.openhab.binding.evohome</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.2.0</version>
 	<name>Evohome Binding</name>
 	<packaging>eclipse-plugin</packaging>
 </project>
