--- a/addons/binding/org.openhab.binding.evohome/pom.xml
+++ b/addons/binding/org.openhab.binding.evohome/pom.xml
@@ -9,6 +9,6 @@
 	<groupId>org.openhab.binding</groupId>
 	<artifactId>org.openhab.binding.evohome</artifactId>
 	<version>2.3.0-SNAPSHOT</version>
-	<name>Evohome Binding</name>
+	<name>evohome Binding</name>
 	<packaging>eclipse-plugin</packaging>
 </project>
